--- a/yoyaku_page.html
+++ b/yoyaku_page.html
@@ -8,6 +8,19 @@
   <link rel="stylesheet" href="css/common.css">
 </head>
 <body>
+
+  <div class="openbtn"><div class="openbtn-area"><span></span><span></span><span></span></div></div>
+  <nav id="g-nav">
+  <div id="g-nav-list">
+  <ul>
+      <li><a href="news.html">ニュース</a></li>
+      <li><a href="index.html">ホーム</a></li>
+      <li><a href="yoyaku_page.html">予約ページ</a></li>
+      <li><a href="toukou.html">投稿</a></li>
+  </ul>
+  </div>
+  </nav>
+
   <div class="contact-container">
     <form action="https://api.web3forms.com/submit" method="POST" class="contact-left">
       <div class="contact-left-title">
@@ -26,5 +39,6 @@
     </div>
   </div>
 </body>
+<script src="js/news.js"></script>
 </html>
 
